Changelog
=========

Changes from cgkit-2.0.0alpha6 to cgkit-2.0.0alpha7:

New features:

Bug fixes/enhancements:

- The built-in materials (GLMaterial, Material3DS, OBJMaterial) can now
  also be used for baking.
- Bugfix: When baking maps, the transformation of the object was ignored.
  This led to incorrect surface shading when the transformation was 
  anything else than the identity.
- WorldObjects now support comparison (i.e. two WorldObject wrappers that
  reference the same C++ object will now appear as identical)
- The setup script was checking for Boost.Python headers even when the
  'light' version was installed. This is fixed.
- Using the GLMaterial class for RenderMan renders was broken (because
  it was still assumed a GLMaterial can only have one texture)
- RMShader: The declare() method did not work when the name argument
  didn't contain an inline declaration and the parameter name started
  with a SL type (such as "colorscale").

----------------------------------------------------------------------
Changes from cgkit-2.0.0alpha5 to cgkit-2.0.0alpha6:

New features:

- New module "glslangparams" to extract uniform, attribute and varying
  variables from OpenGL 2 shaders.
- New module "glslangtokenize" to create tokens from an OpenGL 2 shader file
- New module "lwob" to read Lightwave Object files.
- New *.lwo import plugin using the lwob module
- GLMaterial: The material can now store more than just one texture.
- GLMaterial: New attribute vertex_shader and fragment_shader that take
  a list of GLShader objects (this is in preparation for OpenGL 2.0 shader
  support)
- New module hammersley that contains generators for the Hammersley and Halton
  point sets
- New module stitch.py that can stitch together images that were rendered
  with RiCropWindow(). The file can also be used as a command line utility.
- render.py: An image can now be rendered in tiles by specifying the 
  global 'tiles' parameter. The output image is automatically stitched